--- a/Exam/Exam/MainWindow.xaml
+++ b/Exam/Exam/MainWindow.xaml
@@ -5,8 +5,46 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Exam"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="1300">
     <Grid>
-
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="131*"/>
+            <ColumnDefinition Width="389*"/>
+            <ColumnDefinition Width="280*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="400*"/>
+            <RowDefinition Height="50*"/>
+        </Grid.RowDefinitions>
+        <Image x:Name="backgroundImg" Grid.RowSpan="2" Grid.ColumnSpan="3" Source="bg.jpg" Stretch="UniformToFill"></Image>
+        <DataGrid AutoGenerateColumns="False" Name="dataGrid" Opacity="0" Grid.ColumnSpan="3" FontSize="15" Background="Transparent">
+            <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding Name}" Header="Name" Width="150"/>
+                <DataGridTextColumn Binding="{Binding Height}" Header="Height" Width="50"/>
+                <DataGridTextColumn Binding="{Binding Mass}" Header="Mass" Width="50"/>
+                <DataGridTextColumn Binding="{Binding HairColor}" Header="Hair color" Width="100"/>
+                <DataGridTextColumn Binding="{Binding SkinColor}" Header="Skin color" Width="100"/>
+                <DataGridTextColumn Binding="{Binding EyeColor}" Header="Eye color" Width="100"/>
+                <DataGridTextColumn Binding="{Binding BirthYear}" Header="Birth color" Width="100"/>
+                <DataGridTextColumn Binding="{Binding Gender}" Header="Gender" Width="100"/>
+                <DataGridTextColumn Binding="{Binding Homeworld}" Header="Homeworld" Width="100"/>
+                <DataGridTextColumn Binding="{Binding Created.Date}" Header="Created" Width="180"/>
+                <DataGridTextColumn Binding="{Binding Edited.Date}" Header="Edited" Width="180"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <Label Grid.Row="1" Grid.Column="0" FontSize="25" Content="Страница:" Foreground="Yellow" ></Label>
+        <TextBlock x:Name="starwarsTB" Grid.Row="0" Text="STAR WARS" FontSize="80" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="Yellow" TextWrapping="Wrap" RenderTransformOrigin="0.5,0.5" Height="225" Margin="306,129,0,0" Grid.Column="1" Width="547" Grid.ColumnSpan="2">
+            <TextBlock.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="0.801" ScaleY="0.975"/>
+                    <SkewTransform AngleX="41.906" AngleY="-17.38"/>
+                    <RotateTransform Angle="17.981"/>
+                    <TranslateTransform X="-65.689" Y="6.567"/>
+                </TransformGroup>
+            </TextBlock.RenderTransform>
+        </TextBlock>
+        <TextBox x:Name="pageTB" Grid.Row="1" Grid.Column="1" FontSize="25" Foreground="Yellow" Background="Transparent"></TextBox>
+        <Button  Grid.Row="1" Grid.Column="2" FontSize="25" Content="Загрузить!" Background="Transparent" Foreground="Yellow" Click="LoadBtnClick"></Button>
+        <Button x:Name="closeBtn" Opacity="0" Grid.Row="0" Grid.Column="2" FontSize="25" VerticalAlignment="Top" HorizontalAlignment="Right" Content="X" Height="30" Click="CloseBtnClick"></Button>
     </Grid>
 </Window>
